tests/ui/consts/required-consts/interpret-in-const-called-fn.noopt.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/interpret-in-const-called-fn.rs:8:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation of `Fail::<i32>::C` failed here

note: erroneous constant encountered
  --> $DIR/interpret-in-const-called-fn.rs:18:9
   |
LL |         Fail::<T>::C;
   |         ^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
